# scep

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  Makefile  README.md  SERVER.md  WINDOWS_SCEP_FLOW.md  docker-compose.yml  go.mod  go.sum  package.json
.changeset/: angry-vans-share.md  big-actors-swim.md  brave-llamas-kiss.md  calm-days-repair.md  chilled-news-play.md  chilly-forks-move.md  curvy-shirts-approve.md  dirty-mirrors-develop.md  early-memes-carry.md  early-wolves-applaud.md  eight-hairs-boil.md  eighty-avocados-develop.md  eighty-chefs-prove.md  few-schools-attack.md  flat-buttons-yawn.md  fresh-starfishes-tap.md  gentle-hotels-begin.md  grumpy-hounds-pay.md  happy-penguins-watch.md  healthy-needles-dance.md  hip-balloons-cough.md  lazy-queens-deliver.md  metal-foxes-allow.md  metal-teeth-write.md  modern-doors-think.md  modern-pears-drive.md  moody-turkeys-divide.md  nervous-carrots-destroy.md  nine-ghosts-obey.md  pink-cows-marry.md  pink-foxes-notice.md  polite-trainers-tan.md  poor-cows-drum.md  poor-dragons-burn.md  pre.json  rotten-pugs-wonder.md  rude-adults-begin.md  sharp-tigers-turn.md  silent-cups-joke.md  six-chairs-hunt.md  (+18 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
challenge/: challenge.go  challenge_bolt_test.go
client/: client.go
csrverifier/: csrverifier.go
depot/: cacert.go  depot.go  signer.go
hook/: hook.go
rust-client/service/: Cargo.toml
rust-client/service/src/: config.rs  logging.rs  main.rs  platform.rs  state.rs  windows_paths.rs
(+132 files in other folders)
