[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winreg = "0.52"
eventlog = "0.3"
log = "0.4"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }
